--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <h1>Apagdor JS</h1>
     </header>
     <main>
-        <div><img src="imagens/desligada.jpg" alt="Lâmpada" id="lamp"></div>
         <div>
-            <button id="ligado">Ligar</button>
-            <button id="desligado">Desligar</button>
+            <img src="imagens/desligada.jpg" alt="Lâmpada" id="lamp">
+        </div>
+        <div>
+            <button id="ligaDesliga">Ligar</button>
         </div>
     </main>
     <script src="lampada.js"></script>
